--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -12,3 +12,11 @@
 #wall .tag-1 {
   display: none;
 }
+
+.tag-1, #tag-2, #tag-3, #tag-4, #tag-5, #tag-6, #tag-7 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 980px;
+  height: 622px;
+}
